--- a/Batch Clipboard.xcodeproj/xcshareddata/xcschemes/Batch Clipboard (MAS).xcscheme
+++ b/Batch Clipboard.xcodeproj/xcshareddata/xcschemes/Batch Clipboard (MAS).xcscheme
@@ -15,9 +15,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8F0D3C0F2BAB8F5A00DDB603"
+               BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
                BuildableName = "Batch Clipboard.app"
-               BlueprintName = "Batch Clipboard"
+               BlueprintName = "Batch Clipboard (MAS)"
                ReferencedContainer = "container:Batch Clipboard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,19 +29,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8F07B7AB2BE6E284006E8CBA"
-               BuildableName = "CleeppUITests.xctest"
-               BlueprintName = "CleeppUITests"
-               ReferencedContainer = "container:Maccy.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -53,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
+            BuildableName = "Batch Clipboard.app"
+            BlueprintName = "Batch Clipboard (MAS)"
+            ReferencedContainer = "container:Batch Clipboard.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -60,6 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
+            BuildableName = "Batch Clipboard.app"
+            BlueprintName = "Batch Clipboard (MAS)"
+            ReferencedContainer = "container:Batch Clipboard.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
