--- a/Batch Clipboard.xcodeproj/xcshareddata/xcschemes/Batch Clipboard (MAS).xcscheme
+++ b/Batch Clipboard.xcodeproj/xcshareddata/xcschemes/Batch Clipboard (MAS).xcscheme
@@ -16,7 +16,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
-               BuildableName = "Batch Clipboard.app"
+               BuildableName = "Batch Clipboard MAS.app"
                BlueprintName = "Batch Clipboard (MAS)"
                ReferencedContainer = "container:Batch Clipboard.xcodeproj">
             </BuildableReference>
@@ -27,8 +27,13 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Test Plans/Batch Clipboard (MAS).xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -45,7 +50,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
-            BuildableName = "Batch Clipboard.app"
+            BuildableName = "Batch Clipboard MAS.app"
             BlueprintName = "Batch Clipboard (MAS)"
             ReferencedContainer = "container:Batch Clipboard.xcodeproj">
          </BuildableReference>
@@ -62,7 +67,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8F8C484D2BAD51B000C3A219"
-            BuildableName = "Batch Clipboard.app"
+            BuildableName = "Batch Clipboard MAS.app"
             BlueprintName = "Batch Clipboard (MAS)"
             ReferencedContainer = "container:Batch Clipboard.xcodeproj">
          </BuildableReference>
